--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="#">Download Excursion (Coming Soon!)</p>
+    <p><video src="C:\Users\ali\Desktop\Excursion\Resources\videos\excursion.mp4" autoplay poster="posterimage.jpg">
+
+    </video></p>
+
+
+
 
 </body>
 </html>
