--- a/index.html
+++ b/index.html
@@ -8,14 +8,7 @@
         <link rel="stylesheet" type="text/css" href="Resources/css/style.css">
     </head>
 <body>
-    <h1>Discover hidden places in the world around you</h1>
+    <h1 class="header--main">Discover hidden places in the world around you</h1>
     <p><a href="#">Download Excursion (Coming Soon!)</p>
-    <p><video src="C:\Users\ali\Desktop\Excursion\Resources\videos\excursion.mp4" autoplay poster="posterimage.jpg">
-
-    </video></p>
-
-
-
-
 </body>
 </html>
