--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
         <link rel="stylesheet" type="text/css" href="Resources/css/style.css">
     </head>
 <body>
-    <h1 class="header--main">Discover hidden places in the world around you</h1>
-    <p><a href="#">Download Excursion (Coming Soon!)</p>
+    <h1 class="header">Discover hidden places in the world around you</h1>
+    <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
+    <video  autoplay muted loop>
+        <source src="Resources\videos\excursion.mp4" type="video/mp4">    
+    </video>
+    <h2>Your personal travel guide</h2>
 </body>
 </html>
