add travel guide and remaining content

--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
         <source src="Resources\videos\excursion.mp4" type="video/mp4">    
     </video>
     <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="Resources\images\camp (1).png"></p>
+    <p><img src="Resources\images\phone (1).png"></p>
+    <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
+    <p class="copyright">© Excursion</p>
 </body>
 </html>
