--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <p><img src="Resources\images\camp (1).png"></p>
     <p><img src="Resources\images\phone (1).png"></p>
+    <h2>Coming soon for iPhone and Android!</h2>
     <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
     <p class="copyright">© Excursion</p>
 </body>
